--- a/frontend/src/style/components/_consentNotice.scss
+++ b/frontend/src/style/components/_consentNotice.scss
@@ -1,7 +1,7 @@
 .consent-notice {
   position: fixed;
   bottom: 1.5rem;
-  right: 1.5rem;
+  right: calc(1.5rem + var(--scroll-lock-offset, 0px));
   z-index: 1000;
   background: #fff;
   border: 1px solid #e0e0e0;
